# LR6

./: CMakeLists.txt  README.md
G_Tests/: CMakeLists.txt
Task_1/: CMakeLists.txt  Task_1.cpp
Task_1/Test_1/: Test_1.cpp  functions_1.cpp  head_1.h
Task_2/: CMakeLists.txt  Task_2.cpp
Task_2/Test_2/: Test_2.cpp  functions_2.cpp  head_2.h
Task_3/: CMakeLists.txt  Task_3.cpp
Task_3/Test_3/: Test_3.cpp  functions_3.cpp  head_3.h
